# PatientVitalSystem

./: AmogusSusStrategy.cpp  AmogusSusStrategy.h  CMakeLists.txt  CompositeDiseaseStrategy.cpp  CompositeDiseaseStrategy.h  DiseaseContext.h  DiseaseStrategy.h  Diseasecontext.cpp  ERushStrategy.cpp  ERushStrategy.h  GPObserver.cpp  GPObserver.h  HospitalObserver.cpp  HospitalObserver.h  NocapSyndromeStrategy.cpp  NocapSyndromeStrategy.h  Observer.h  Patient.cpp  Patient.h  PatientFileLoader.cpp  PatientFileLoader.h  PatientFileLoaderAdapter.cpp  PatientFileLoaderAdapter.h  PatientManagementSystem.cpp  PatientManagementSystem.h  README.md  Subject.cpp  Subject.h  TicctoccBrainDamage.cpp  TicctoccBrainDamage.h
